--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -11,7 +11,8 @@
     <base href="<%= htmlWebpackPlugin.options.baseUrl %>">
 </head>
 
-<body ng-app="app" ng-strict-di ng-cloak>
+<body ng-app="beastie" ng-strict-di ng-cloak>
+    test
     <div ui-view>
         <div style="width:100%;height:100vh;text-align:center;padding-top:200px">
             <img
