--- a/client/src/core/listItems/listItems.styl
+++ b/client/src/core/listItems/listItems.styl
@@ -15,3 +15,9 @@
     .sub-items
         border-left: 5px solid rgb(29, 63, 66)
         margin-left: -5px
+
+    .listItems-header
+        max-height: 50px
+        .md-button
+            min-height: 20px
+            line-height: 20px
