--- a/client/src/core/orders/orders.styl
+++ b/client/src/core/orders/orders.styl
@@ -1,1 +1,20 @@
 @import "~variable"
+
+#time-picker
+    height: 100px
+    div
+        height: 200px
+        min-width: 80px
+        text-align: center
+    .md-button
+        min-height: 200px
+        line-height: 200px
+        padding: 0px
+        margin: 0px
+#orders
+    .orders-showpet
+        img
+            max-height: 100px
+            width: auto;
+        div:hover
+            background-color: #e7fff3
