--- a/client/src/client/components/keypad/keypad.styl
+++ b/client/src/client/components/keypad/keypad.styl
@@ -9,6 +9,7 @@
     padding: 5px
     background-color: #f5f5f5
     height: 50px
+    font-size: 30px
 
 table.keypad tr td
     text-align: center
@@ -18,3 +19,5 @@ table.keypad .md-button
     font-size: 20px
     width: 80px
     height: 80px
+table.keypad .md-button.keypad-keys
+    font-size: 40px
