--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -8,3 +8,9 @@ body
     width 100%
     overflow-x: hidden
     font-family: $font-family
+
+#core
+    .sidenav
+        md-icon
+            margin: 30px
+            transform: scale(2, 2);
