--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -11,8 +11,8 @@
     <base href="<%= htmlWebpackPlugin.options.baseUrl %>">
 </head>
 
-<body ng-app="beastie" ng-strict-di ng-cloak >
-    <div ui-view layout-fill>
+<body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
+    <div ui-view layout-fill layout="column" flex>
         <div style="width:100%;height:100vh;text-align:center;padding-top:200px">
             <img
                 width="200px"
