add pets module and snapshot

--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -12,5 +12,5 @@ body
 #core
     .sidenav
         md-icon
-            margin: 30px
+            margin: 20px 30px 20px 30px
             transform: scale(2, 2);
