--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -14,3 +14,5 @@ body
         md-icon
             margin: 20px 30px 20px 30px
             transform: scale(2, 2);
+.padding-6-0
+    padding 6px 0px
