user login and socket io

--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -19,5 +19,6 @@
                 src="./assets/img/loading.gif" alt="Loading..." />
         </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
