add signature canvas

--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -19,6 +19,7 @@
                 src="./assets/img/loading.gif" alt="Loading..." />
         </div>
     </div>
+    <script src='./assets/js/fastclick.js'></script>
     <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
