add inhouseOrder print

--- a/client/src/core/inhouseOrders/inhouseOrders.styl
+++ b/client/src/core/inhouseOrders/inhouseOrders.styl
@@ -3,3 +3,9 @@
 #inhouse-orders
     button
         border: 1px solid #6c6c6c
+
+
+#inhouse-orders-canvas
+    width: 500px
+    // height: 500px
+    border 1px solid #1b1b1b
