change inhouse order layout

--- a/client/src/core/inhouseOrders/inhouseOrders.styl
+++ b/client/src/core/inhouseOrders/inhouseOrders.styl
@@ -3,7 +3,10 @@
 #inhouse-orders
     button
         border: 1px solid #6c6c6c
-
+    .padding-box
+        padding-bottom: 10px
+        h3
+            margin-bottom: 0px
 
 #inhouse-orders-canvas
     width: 500px
