--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -11,8 +11,17 @@ body
 
 #core
     .sidenav
+        background-color: $bgColor
+        margin-right: 30px
         md-icon
             margin: 20px 30px 20px 30px
             transform: scale(2, 2);
+            color: #fff2d6
+        md-icon:hover
+            color: #ffffff
+        md-icon:focus
+            outline: none
+            border: 0
+
 .padding-6-0
     padding 6px 0px
