--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -1,5 +1,5 @@
 $primaryColor = #003657
-$bgColor = #ffffff
+$bgColor = #005b9d
 $darkBgColor = #212121
 $lightBgColor = #37474f
 $lightTextColor = #f5f5f5
