--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -1,20 +1,14 @@
 @import "~variable"
 
-html,
-body
-    margin 0
-    padding 0
-    height 100%
-    width 100%
-    overflow-x: hidden
-    font-family: $font-family
 
 #core
     .sidenav
         background-color: $bgColor
-        margin-right: 30px
+        margin-top: -30px
+        padding: 30px
         md-icon
-            margin: 20px 30px 20px 30px
+            display: block
+            margin: 50px 0px 0px 0px
             transform: scale(2, 2);
             color: #fff2d6
         md-icon:hover
