--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
-    <div ui-view layout="column" flex>
+    <div ui-view layout="column" flex layout-fill>
         <div style="width:100%;height:100vh;text-align:center;padding-top:200px">
             <img
                 width="200px"
