--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -6,3 +6,12 @@ $lightTextColor = #f5f5f5
 $darkTextColor = #212121
 
 $font-family = Roboto, Century Gothic, Tahoma, Geneva, Georgia, sans-serif
+
+html,
+body
+    margin 0
+    padding 0
+    height 100vh
+    width 100%
+    overflow-x: hidden
+    font-family: $font-family
