--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -2,6 +2,14 @@
 
 
 #core
+    md-dialog
+        md-subheader
+            margin-bottom: 15px
+        max-height: 600px
+        md-input-container
+            margin 0
+            margin-left: 20px
+            padding-left: 20px
     .sidenav
         background-color: $bgColor
         margin-top: -30px
