add quick inhouseorders and fix printer

--- a/client/src/core/inhouseOrders/inhouseOrders.styl
+++ b/client/src/core/inhouseOrders/inhouseOrders.styl
@@ -1,6 +1,10 @@
 @import "~variable"
 
 #inhouse-orders
+    .header
+        width: 700px
+        padding: 20px
+        border-bottom: 1px solid #d2d2d2
     button
         border: 1px solid #6c6c6c
     .padding-box
