--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -1,8 +1,11 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="<%= htmlWebpackPlugin.options.author %>">
@@ -14,12 +17,18 @@
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
     <div ui-view layout="column" flex layout-fill>
         <div style="width:100%;height:100vh;text-align:center;padding-top:200px">
-            <img
-                width="200px"
-                src="./assets/img/loading.gif" alt="Loading..." />
+            <img width="200px" src="./assets/img/loading.gif" alt="Loading..." />
         </div>
     </div>
     <script src='./assets/js/fastclick.js'></script>
+    <script type="text/javascript">
+        if ('addEventListener' in document) {
+            document.addEventListener('DOMContentLoaded', function() {
+                FastClick.attach(document.body);
+            }, false);
+        }
+    </script>
     <script src="/socket.io/socket.io.js"></script>
 </body>
+
 </html>
