--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -11,7 +11,7 @@
             margin-left: 20px
             padding-left: 20px
     .sidenav
-        background-color: $bgColor
+        // background-color: $bgColor
         margin-top: -30px
         padding: 30px
         md-icon
@@ -27,3 +27,10 @@
 
 .padding-6-0
     padding 6px 0px
+
+.md-button
+    font-weight 600
+    font-size 16px
+    border none
+.border-solid
+    border solid 2px
