--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -2,3 +2,60 @@
     img
         max-height: 150px
         max-width: 150px
+    
+    // md-grid-list md-grid-tile::before, md-grid-list md-grid-tile::after
+    //     content: '';
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    //     border-color: transparent;
+    //     border-style: solid;
+    // md-grid-list md-grid-tile::after
+    //     border-width: 1.35em;
+    //     border-right-color: #0c0;
+    //     border-top-color: #0c0;
+    md-grid-list:first-child::before, md-grid-list:first-child::after
+        content: ' ';
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-color: transparent;
+        border-style: solid;
+    md-grid-list:first-child::after
+        border-width: 1em;
+        // border-color: #0c0
+        
+    md-grid-list
+        &:first-child::after
+            border-color: #757575
+        &.label-checkedin:first-child::after
+            border-color: darkcyan
+        &.label-canceled:first-child::after
+            border-color: #FF9800
+        &.label-noshow:first-child::after
+            border-color: #FF5722
+    md-grid-list md-grid-tile
+        background-color rgba(178,223,219, 0.5)
+        button
+            min-width initial
+            padding 0px
+.selected_date_mode 
+    border solid 3px
+    
+#box::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+
+
+
+#box::after {
+    
+    border-width: 1.35em;
+    border-right-color: #0c0;
+    border-top-color: #0c0;
+}
