too much to say.

--- a/client/src/client/client.styl
+++ b/client/src/client/client.styl
@@ -2,4 +2,8 @@
 client
     .header
         height: 50px
-        
+        md-icon
+            margin-right: 20px
+            margin-left: 10px
+            margin-top: -5px
+            transform: scale(1.2,1.2);
