--- a/client/src/client/dashboard/dashboard.styl
+++ b/client/src/client/dashboard/dashboard.styl
@@ -4,10 +4,21 @@ client-dashboard
             border 1px solid #001640
             padding: 30px
             width: 800px
+        .order-box
+            margin-right: 20px
+        img
+            // max-width: 400px
+            max-height: 400px
     .footer
         button
             border 1px solid #c4d9ff
             padding: 30px
-            width: 200px
+            width: 300px
+            span
+                padding: 5px
+                border-radius: 5px
+                mix-blend-mode: normal
+                background-color: rgba(255, 255, 255, 0.6)
+
         button:hover
             border 1px solid #7aa9ff
