--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -25,6 +25,18 @@
             outline: none
             border: 0
 
+#quick-start-dialog
+    min-width: 300px
+    min-height: 300px
+    md-input-container
+        input
+            padding: 5px
+            margin-left: -15px
+            height: 50px
+            font-size: 2.5em
+            width: 300px
+
+
 .padding-6-0
     padding 6px 0px
 
