--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -15,6 +15,7 @@
 </head>
 
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
+    <div id="snapshot-div"></div>
     <div ui-view layout="column" flex layout-fill>
         <div style="width:100%;height:100vh;text-align:center;padding-top:200px">
             <img width="200px" src="./assets/img/loading.gif" alt="Loading..." />
