--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -15,3 +15,14 @@ body
     width 100%
     overflow-x: hidden
     font-family: $font-family
+
+    // .md-dialog-is-showing
+    //     overflow: visible
+    // md-backdrop
+    //     position: fixed
+
+    // #snapshot-div
+    //     position: fixed;
+    //     top: 0
+    //     left: 0
+    //
