--- a/client/src/userAuth/userAuth.styl
+++ b/client/src/userAuth/userAuth.styl
@@ -1,1 +1,28 @@
 @import "~variable"
+user-auth
+    .back
+        md-icon
+            position: fixed;
+            top 50%
+            left: 50%
+            // margin-top 300px
+            transform: scale(100,100);
+            z-index: 1
+    .form
+        width: 300px
+        min-width: 300px
+        padding: 30px 30px 30px 30px
+        background-color: rgba(255, 255, 255, 0.9)
+        mix-blend-mode: normal;
+        z-index: 99
+        border-radius: 50px
+        button
+            border-radius: 10px
+
+        .logo-container
+            width: 100%
+            height: 100px
+            text-align: center
+            md-icon
+                margin-top: 30px
+                transform: scale(5,5);
