fix touch issue

--- a/client/src/core/components/keypad/keypad.styl
+++ b/client/src/core/components/keypad/keypad.styl
@@ -1,9 +1,9 @@
-.keypad {
+.keypad 
     margin: 10px auto;
     padding: 0;
     width: 300px; /* not actually a static size, % in real use */
     height: 400px;
-}
+
 
 .keypad-display
     padding: 5px
