--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -28,6 +28,7 @@
 #quick-start-dialog
     min-width: 300px
     min-height: 300px
+    z-index: 100
     md-input-container
         input
             padding: 5px
@@ -35,6 +36,10 @@
             height: 50px
             font-size: 2.5em
             width: 300px
+    .header
+        max-height: 30px
+        min-height: 30px
+        height: 30px
 
 
 .padding-6-0
