--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -5,6 +5,12 @@ $lightBgColor = #37474f
 $lightTextColor = #f5f5f5
 $darkTextColor = #212121
 
+// ng-material theme colors
+$md-warn = rgba(255,87,34, 0.85098)
+$md-accent = rgba(76, 175, 80, 0.85098)
+$md-primary = rgba(121, 85, 72, 0.85098)
+$color-tile-upcoming = slategrey
+
 $font-family = Roboto, Century Gothic, Tahoma, Geneva, Georgia, sans-serif
 
 html,
