--- a/client/src/core/orders/ordersForm/ordersForm.styl
+++ b/client/src/core/orders/ordersForm/ordersForm.styl
@@ -8,7 +8,45 @@
         max-height: 500px
         img
             max-height: 150px
+    .selected-date-orders
+        padding-bottom: 10px
+        h3
+            margin: 0px
+            margin-right: 20px
+
+    .current-order-text
+        color: #ff7a7a
+        font-weight: bold
+    .time-date.vertical
+        input
+            background-color: rgb(255, 255, 255)
+            border 0px
+        .am-pm-btn
+            margin-top: -100px
+            margin-left: 100px
+            color: white
+            background-color: rgb(198, 89, 96)
+    .time-date.vertical.full-mode > .control
+        height: 35rem
+    .time-date > .control > .slider > .date-control
+        height: 20rem
+    .time-date > .control > .slider > .time-control
+        height: 15rem
+    .time-date.vertical.full-mode > .control > .full-title
+        display: none;
+    .time-date.full-mode > .buttons
+        display: none;
+    // .time-date
+    //     button
+    //         border 1px solid black
+
+    .customer-field
+        padding-left: 40px
+        p
+            padding: 0px
+            margin: 0px
 #time-picker
+    margin-top 30px
     md-icon
         transform: scale(2,2);
     button
