--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -12,6 +12,7 @@
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>">
     <link rel="icon" href="<%= htmlWebpackPlugin.options.iconUrl %>">
     <base href="<%= htmlWebpackPlugin.options.baseUrl %>">
+    <link rel="stylesheet" src="/assets/css/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
