--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -40,7 +40,8 @@
     
     
     md-grid-list md-grid-tile
-        background-color rgba(178,223,219, 0.5)
+        // background-color rgba(178,223,219, 0.5)
+        background-color #D9EFED
         button
             min-width initial
             padding 0px
@@ -49,6 +50,9 @@
         background-color $md-warn
     .tile-cancel.md-button.md-accent[disabled]
         background-color $md-accent
+    
+    div.grid-highlight 
+        background $md-primary-light
     // .tile-warn::after
     //     content 'hello'
     //     position absolute
