--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -9,6 +9,7 @@ $darkTextColor = #212121
 $md-warn = rgba(255,87,34, 0.85098)
 $md-accent = rgba(76, 175, 80, 0.85098)
 $md-primary = rgba(121, 85, 72, 0.85098)
+$md-primary-light = rgba(121, 85, 72, 0.35)
 $color-tile-upcoming = slategrey
 
 $font-family = Roboto, Century Gothic, Tahoma, Geneva, Georgia, sans-serif
