--- a/client/src/core/orders/previousOrdersDialog.styl
+++ b/client/src/core/orders/previousOrdersDialog.styl
@@ -1,4 +1,6 @@
 #previous-orders-dialog
+    md-dialog
+        min-height: 600px
     .main
         button
             border 1px solid #001640
@@ -8,7 +10,7 @@
             margin-right: 20px
         img
             // max-width: 400px
-            max-height: 600px
+            max-height: 450px
     .footer
         button
             border 1px solid #c4d9ff
