--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -20,7 +20,7 @@ body
     padding 0
     height 100vh
     width 100%
-    overflow-x: hidden
+    overflow-x: hidden!important
     font-family: $font-family
 
     // .md-dialog-is-showing
