#2 add preview large pic

--- a/client/src/core/customers/customerDetailDialog.styl
+++ b/client/src/core/customers/customerDetailDialog.styl
@@ -12,8 +12,8 @@
             span
                 font-size: 2em
     .gallery-box
-        width:350px
-        height: 100%
+        min-width: 320px
+        height: 500px
     img
         height auto
         width: 300px
@@ -25,3 +25,14 @@
     md-input-container
         padding: 0px
         margin: 0px
+
+#preview-large
+    z-index: 300
+    position: fixed
+    top: 0px
+    left: 0px;
+    width:1000px
+    height:700px
+    line-height:700px
+    img
+        width: 100%
