--- a/client/src/core/customers/customersList/customersList.styl
+++ b/client/src/core/customers/customersList/customersList.styl
@@ -1,5 +1,13 @@
 #customers-list
     table
+        margin-top: 50px
+
+        .fixed-top
+            position: fixed
+            top: 0px
+            width:100%
+            background-color: #ffffff
+
         md-icon
             display: inline-block;
         md-input-container
