#5 fake data and orderslist

--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -3,7 +3,13 @@
     img
         max-height: 150px
         max-width: 150px
-    
+    .tile-pets-name
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        width: 100%;
+        text-align: center;
+        
     // md-grid-list md-grid-tile::before, md-grid-list md-grid-tile::after
     //     content: '';
     //     position: absolute;
