--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -12,7 +12,7 @@ $md-primary = rgba(121, 85, 72, 0.85098)
 $md-primary-light = rgba(121, 85, 72, 0.35)
 $color-tile-upcoming = slategrey
 
-$font-family = Roboto, Century Gothic, Tahoma, Geneva, Georgia, sans-serif
+$font-family = Roboto, sans-serif, Arial, Tahoma, Geneva, Georgia, sans-serif
 
 html,
 body
