#6 add old customer panel

--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -40,6 +40,9 @@
         max-height: 30px
         min-height: 30px
         height: 30px
+#old-customer-panel-dialog
+    min-width: 400px
+    min-height: 200px
 
 
 .padding-6-0
