add dayschedule view

--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -13,6 +13,8 @@
     <link rel="icon" href="<%= htmlWebpackPlugin.options.iconUrl %>">
     <base href="<%= htmlWebpackPlugin.options.baseUrl %>">
     <link rel="stylesheet" src="/assets/css/font-awesome/css/font-awesome.min.css">
+    <script src='/assets/js/vis/vis.js'></script>
+    <link rel="stylesheet" src="/assets/js/vis/vis.css">
 </head>
 
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
