update client form

--- a/client/src/client/client.styl
+++ b/client/src/client/client.styl
@@ -3,6 +3,8 @@ client
     .header
         height: 50px
         md-icon
+            color: rgba(205, 205, 205, 0.5)
+            fill: rgba(205, 205, 205, 0.5)
             margin-right: 20px
             margin-left: 10px
             margin-top: -5px
