--- a/client/src/client/petsForm/petsForm.styl
+++ b/client/src/client/petsForm/petsForm.styl
@@ -1,5 +1,14 @@
 #client-pets-form
+    .error
+        color: #f51c4d
+        font-size: 1.2em
     .preview
         img
             max-width: 150px
             max-height: 150px
+
+    .step-control
+        button
+            margin: 0px
+    .form
+        padding: 50px
