--- a/client/src/core/components/daySchedule/daySchedule.styl
+++ b/client/src/core/components/daySchedule/daySchedule.styl
@@ -1,5 +1,8 @@
 $grayLight = #e3e3e3
 $grayMedium = #808080
+day-schedule
+    .day-schedule-container
+        padding-top: 10px;
 #day-schedule
     position relative
     color: $grayMedium
