add isRush to inhouseorders

--- a/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
+++ b/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
@@ -2,10 +2,16 @@
 #inhouse-orders-dialog
     md-dialog
         min-height: 650px
-        min-width: 650px
+        min-width: 1000px
 #inhouse-orders
+    md-toolbar
+        min-height: 30px
     .header
+        width: 100%
         height: 30px
+        h5
+            margin: 0px
+            padding: 0px
         md-icon
             margin-top: 0px
     .footer
