establish cache in orders.service

--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -1,5 +1,9 @@
 @import "~variable"
+md-toast .md-toast-content span.md-toast-text
+    font-size 200%
+    text-align center
 #order-list
+    
     img
         max-height: 150px
         max-width: 150px
