edit quick start

--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -30,8 +30,8 @@
             border: 0
 
 #quick-start-dialog
-    min-width: 300px
-    min-height: 300px
+    min-width: 700px
+    min-height: 600px
     z-index: 100
     md-input-container
         input
@@ -44,6 +44,11 @@
         max-height: 30px
         min-height: 30px
         height: 30px
+    .query
+        min-width: 200px
+        padding: 15px
+    // .keypad
+    //     padding: 15px
 #old-customer-panel-dialog
     min-width: 400px
     min-height: 200px
