--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -8,11 +8,13 @@ md-toast .md-toast-content span.md-toast-text
         max-height: 150px
         max-width: 150px
     .tile-pets-name
+        background-color: rgba(255,255,255,0.5);
         position: absolute;
         bottom: 0px;
         left: 0px;
         width: 100%;
         text-align: center;
+        padding-bottom: 6px;
         
     // md-grid-list md-grid-tile::before, md-grid-list md-grid-tile::after
     //     content: '';
