added for canvas.toBlob support on chrome 49

--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -16,6 +16,7 @@
     <!-- <script src='/assets/js/vis/vis.js'></script> -->
     <!-- <link rel="stylesheet" src="/assets/js/vis/vis.css"> -->
     <script type='application/javascript' src='/assets/js/fastclick.js'></script>
+    <script type='application/javascript' src='/assets/js/canvas-to-blob.min.js'></script>
     <script type="text/javascript">
         if ('addEventListener' in document) {
             document.addEventListener('DOMContentLoaded', function() {
