--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -22,7 +22,8 @@ body
     width 100%
     overflow-x: hidden!important
     font-family: $font-family
-
+    -webkit-user-select:none
+    
     // .md-dialog-is-showing
     //     overflow: visible
     // md-backdrop
@@ -33,6 +34,6 @@ body
     //     top: 0
     //     left: 0
     //
-.s48 
+.s48
     width: 48px;
     height: 48px;
