--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -8,7 +8,7 @@
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <meta name="author" content="<%= htmlWebpackPlugin.options.author %>">
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>">
