add credits in client side

--- a/client/src/client/AddCredits/AddCredits.styl
+++ b/client/src/client/AddCredits/AddCredits.styl
@@ -1,11 +1,7 @@
-@import "~variable"
-$alertColor = #f02723
-
-client-self-service-form
+client-add-credits
     .header
         max-height: 50px
         div
-            padding-right:15px
             min-width: 150px
 
     md-card
