fix upper lower case for importing

--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -14,6 +14,7 @@
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>">
     <link rel="icon" href="<%= htmlWebpackPlugin.options.iconUrl %>">
     <base href="<%= htmlWebpackPlugin.options.baseUrl %>">
+    <script src="./assets/js/canvas-to-blob.min.js"></script>
 </head>
 
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
