add client side credit and selfservices

--- a/client/src/core/Transactions/services/TransactionsDialog.styl
+++ b/client/src/core/Transactions/services/TransactionsDialog.styl
@@ -1,1 +1,18 @@
 // @import "~variable"
+#transactions-dialog
+    md-dialog
+        min-width: 800px
+        min-height: 650px
+    .detail
+        width: 300px
+
+    .select-buttons
+        button
+            // padding: 15px
+            // line-height: 50px
+            min-height: 50px
+            height: 50px
+            min-width: 130px
+
+    .strikethrough
+        text-decoration: line-through
