--- a/client/src/client/signature/signature.styl
+++ b/client/src/client/signature/signature.styl
@@ -2,3 +2,8 @@
 
 #signature-canvas
     -webkit-transform: translate3d(0, 0, 0)
+
+client-signature
+    .description
+        font-size: 28px
+        padding 15px
