mainly on hooking up customer detail and ordersList, and photo related stuff

--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -90,7 +90,14 @@ md-toast .md-toast-content span.md-toast-text
         background-color $md-warn
     .tile-cancel.md-button.md-accent[disabled]
         background-color $md-accent
-    
+    .tile-pet-img
+        background-repeat no-repeat
+        background-position: center center; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size cover
+        
     div.grid-highlight 
         background $md-primary-light
     // .tile-warn::after
