lock checkout and add confirm reset checkin

--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -2,8 +2,10 @@
 md-toast .md-toast-content span.md-toast-text
     font-size 200%
     text-align center
-[aria-label="paid by cash"], [aria-label="confirm CANCEL"], [aria-label="confirm NO-SHOW"]
-    font-size 24px
+[aria-label="paid by cash"], [aria-label="confirm CANCEL"], [aria-label="confirm NO-SHOW"], [aria-label="confirm reset"]
+    font-size 20px
+    h2 
+        font-size 24px
     md-dialog-actions
         padding 0px 8px
         button
