--- a/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
+++ b/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
@@ -3,6 +3,8 @@
     md-dialog
         min-height: 650px
         min-width: 1000px
+        max-height: 100vh
+
 #inhouse-orders
     md-toolbar
         min-height: 30px
@@ -24,6 +26,10 @@
         padding-bottom: 10px
         h3
             margin-bottom: 0px
+    .button-container
+        max-width: 90%
+        button
+            display: inline-block;
 
 #inhouse-orders-canvas
     width: 500px
