update css for inhouse orders

--- a/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
+++ b/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
@@ -25,11 +25,15 @@
     .padding-box
         padding-bottom: 10px
         h3
+            color #9a9a9a
+            font-size 2em
             margin-bottom: 0px
     .button-container
         max-width: 90%
         button
             display: inline-block;
+            font-size: 2em
+            padding: 5px
 
 #inhouse-orders-canvas
     width: 500px
