--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -1,19 +1,36 @@
 @import "~variable"
-md-toast .md-toast-content span.md-toast-text
-    font-size 200%
-    text-align center
-[aria-label="paid by cash"], [aria-label="confirm CANCEL"], [aria-label="confirm NO-SHOW"], [aria-label="confirm reset"]
-    font-size 20px
-    h2 
-        font-size 24px
-    md-dialog-actions
-        padding 0px 8px
+$navHeight = 100px
+$navBtnHeight = 84px
+
+
+
+#md-date-pane0 > div.md-datepicker-input-mask
+    height 0px
+
+#orders-list
+    nav
+        height $navHeight
         button
-            margin 8px 4px
-            font-size 24px
-            width 50%
-            height 100px
-#order-list
+            height $navBtnHeight
+            padding 2px 8px
+            md-datepicker
+                display block
+                width 0px
+                height 0px
+            &.nav-date
+                min-width 0px
+                padding 0px
+                margin auto 0px
+    #no-order-text
+        &>div
+            position:absolute
+            top:200px
+            left:0px
+            text-align:center
+            width:100%
+    .pet-img-placeholder
+        padding-bottom 20px
+    
     .animate-show.ng-hide-add 
         transition: all linear 0.75s;
     .animate-show.ng-hide-remove
@@ -34,9 +51,6 @@ md-toast .md-toast-content span.md-toast-text
         text-align: center;
         padding 2px 2px
     
-    img
-        max-height: 150px
-        max-width: 150px
     .tile-pets-name
         background-color: rgba(255,255,255,0.5);
         position: absolute;
@@ -126,6 +140,19 @@ md-toast .md-toast-content span.md-toast-text
     border-top-color: #0c0;
 }
 
-#md-date-pane0 > div.md-datepicker-input-mask
-    height 20px
-    
+
+
+md-toast .md-toast-content span.md-toast-text
+    font-size 200%
+    text-align center
+[aria-label="paid by cash"], [aria-label="confirm CANCEL"], [aria-label="confirm NO-SHOW"], [aria-label="confirm reset"]
+    font-size 20px
+    h2 
+        font-size 24px
+    md-dialog-actions
+        padding 0px 8px
+        button
+            margin 8px 4px
+            font-size 24px
+            width 50%
+            height 100px
