--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -34,9 +34,15 @@ body
     //     top: 0
     //     left: 0
     //
+.s30
+    width: 30px;
+    height: 30px;
 .s48
     width: 48px;
     height: 48px;
 .s100
     width 100px
     height 100px
+    
+.cap-text
+    text-transform:capitalize
