--- a/client/src/core/customers/Pets/Pets.styl
+++ b/client/src/core/customers/Pets/Pets.styl
@@ -11,3 +11,6 @@ customer-pets
             top 10px
             z-index: 600
             background-color: #ffffff
+    md-input-container
+        padding: 0px
+        margin: 0px
