--- a/client/src/core/customers/customerDetailDialog.styl
+++ b/client/src/core/customers/customerDetailDialog.styl
@@ -4,8 +4,10 @@
     .header
         height: 20px
     md-dialog
-        min-width: 1100px
-        min-height: 600px
+        min-height: 100vh
+        min-width: 100%
+        // min-width: 1100px
+        // min-height: 600px
 
     .gallery
         .md-subheader
