#27 add edit and select for selfservice

--- a/client/src/core/Transactions/NewTransactions/NewTransactions.styl
+++ b/client/src/core/Transactions/NewTransactions/NewTransactions.styl
@@ -7,3 +7,6 @@ transactions-new
             padding: 20px
             font-size: 0.9em
             color: #494949
+
+            .selected-addon
+                border 1px solid
