#22 refract client pet form

--- a/client/src/client/petsForm/petsForm.styl
+++ b/client/src/client/petsForm/petsForm.styl
@@ -1,4 +1,4 @@
-#client-pets-form
+client-pets-form
     .error
         color: #f51c4d
         font-size: 1.2em
@@ -6,9 +6,22 @@
         img
             max-width: 150px
             max-height: 150px
-
     .step-control
         button
             margin: 0px
     .form
         padding: 50px
+        font-size: 1.5em
+    .header
+        background-color:beige
+        min-height: 80px
+    .content
+        padding-left: 50px
+        padding-right: 50px
+    md-input-container
+        .md-input
+            margin-top: 10px
+
+    .review
+        p
+            font-size: 2em
