#22 fix layout in iOS

--- a/client/src/client/client.styl
+++ b/client/src/client/client.styl
@@ -9,3 +9,7 @@ client
             margin-left: 10px
             margin-top: -5px
             transform: scale(1.2,1.2);
+
+    // for iOS
+    md-content
+        -webkit-overflow-scrolling: auto;
