--- a/client/src/client/customersForm/customersForm.styl
+++ b/client/src/client/customersForm/customersForm.styl
@@ -3,15 +3,15 @@ client-customers-form
         background-color:beige
         min-height: 80px
     .content
+        font-size: 1.5em
         padding-left: 50px
         padding-right: 50px
-    md-input-container
-        label
-            font-size: 2em
-        .md-input
-            margin-top: 20px
-            font-size: 2em
+    // md-input-container
+    //     label
+    //         font-size: 2em
+    //     .md-input
+    //         margin-top: 20px
 
     .review
         p
-            font-size: 2em
+            font-size: 1.2em
