--- a/client/src/core/signatures/showSignaturesDialog.styl
+++ b/client/src/core/signatures/showSignaturesDialog.styl
@@ -1,6 +1,6 @@
 #show-signatures-dialog
     md-dialog
-        min-width: 600px
+        min-width: 80%
         min-height: 100vh
         .header
             height: 50px
