#34 add edit and view to old customer dialog

--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -8,7 +8,7 @@ $highlight = #ff0000
     md-dialog
         md-subheader
             margin-bottom: 15px
-        max-height: 600px
+        max-height: 90vh
         md-input-container
             margin 0
             margin-left: 20px
@@ -64,9 +64,8 @@ $highlight = #ff0000
     // .keypad
     //     padding: 15px
 #old-customer-panel-dialog
-    min-width: 600px
-    min-height: 600px
-
+    min-width: 800px
+    height: 600px
 
 .padding-6-0
     padding 6px 0px
