modify color and style on ordreslist

--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -1,6 +1,10 @@
 @import "~variable"
 $navHeight = 100px
 $navBtnHeight = 84px
+// $tileColor = #D9EFED
+$tileColor = #E0F2F1
+// $tileHighlightColor = $md-primary-light #FFECB3
+$tileHighlightColor = #D7CCC8
 
 
 
@@ -61,7 +65,7 @@ $navBtnHeight = 84px
         padding-bottom: 6px;
     
     div.grid-highlight 
-        background $md-primary-light
+        background $tileHighlightColor 
     
     md-grid-list md-grid-tile
         // background-color rgba(178,223,219, 0.5)
