fix for windows

--- a/client/src/core/core.styl
+++ b/client/src/core/core.styl
@@ -44,8 +44,8 @@ $highlight = #ff0000
         // border-top: 20px solid #f00;
 
 #quick-start-dialog
-    min-width: 700px
-    min-height: 600px
+    min-width: 800px
+    min-height: 90vh
     z-index: 100
     md-input-container
         input
