--- a/client/src/core/orders/chooseServiceDialog.styl
+++ b/client/src/core/orders/chooseServiceDialog.styl
@@ -1,6 +1,6 @@
 #choose-service-dialog
     md-dialog
-        width: 500px
-        height: 500px
+        min-width: 500px
+        min-height: 500px
         .header
             height: 50px
