--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -34,12 +34,12 @@ $tileHighlightColor = #D7CCC8
             width:100%
     .pet-img-placeholder
         padding-bottom 20px
-    
-    .animate-show.ng-hide-add 
+
+    .animate-show.ng-hide-add
         transition: all linear 0.75s;
     .animate-show.ng-hide-remove
         transition: all linear 0.5s;
-    .animate-show.ng-hide 
+    .animate-show.ng-hide
         opacity: 0;
 
     .label-rush::after
@@ -54,7 +54,7 @@ $tileHighlightColor = #D7CCC8
         line-height: 90%;
         text-align: center;
         padding 2px 2px
-    
+
     .tile-pets-name
         background-color: rgba(255,255,255,0.5);
         position: absolute;
@@ -63,10 +63,10 @@ $tileHighlightColor = #D7CCC8
         width: 100%;
         text-align: center;
         padding-bottom: 6px;
-    
-    div.grid-highlight 
-        background $tileHighlightColor 
-    
+
+    div.grid-highlight
+        background $tileHighlightColor
+
     md-grid-list md-grid-tile
         // background-color rgba(178,223,219, 0.5)
         background-color #D9EFED
@@ -74,14 +74,22 @@ $tileHighlightColor = #D7CCC8
             min-width initial
             padding 0px
             border-radius 0px
-    
+
     .tile-pet-img
         background-repeat no-repeat
-        background-position: center center; 
+        background-position: center center;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size cover
+
+    button
+        text-align: center
+        img
+            left 50%
+            margin-left -50px
+            max-width: 300px
+
 
 md-toast .md-toast-content span.md-toast-text
     font-size 200%
@@ -89,7 +97,7 @@ md-toast .md-toast-content span.md-toast-text
 
 [aria-label="paid by cash"], [aria-label="confirm CANCEL"], [aria-label="confirm NO-SHOW"], [aria-label="confirm reset"]
     font-size 20px
-    h2 
+    h2
         font-size 24px
     md-dialog-actions
         padding 0px 8px
@@ -97,9 +105,8 @@ md-toast .md-toast-content span.md-toast-text
             margin 8px 4px
             font-size 24px
             width 50%
-            height 100px        
-    
-        
+            height 100px
+
     // md-grid-list md-grid-tile::before, md-grid-list md-grid-tile::after
     //     content: '';
     //     position: absolute;
@@ -111,7 +118,7 @@ md-toast .md-toast-content span.md-toast-text
     //     border-width: 1.35em;
     //     border-right-color: #0c0;
     //     border-top-color: #0c0;
-    
+
     // md-grid-tile:nth-child(2)
 
     // md-grid-list:first-child::before, md-grid-list:first-child::after
@@ -133,23 +140,23 @@ md-toast .md-toast-content span.md-toast-text
     //         border-color: $md-accent
     //     &.label-noshow:first-child::after
     //         border-color: $md-warn
-    
-    
-    
+
+
+
     // .tile-no-show.md-button.md-raised[disabled]
     //     background-color $md-warn
     // .tile-cancel.md-button.md-accent[disabled]
     //     background-color $md-accent
-    
+
     // .tile-warn::after
     //     content 'hello'
     //     position absolute
     //     top 0
     //     left
-    
-// .selected_date_mode 
+
+// .selected_date_mode
 //     border solid 3px
-    
+
 // #box::after {
 //     content: '';
 //     position: absolute;
@@ -164,6 +171,3 @@ md-toast .md-toast-content span.md-toast-text
 //     border-right-color: #0c0;
 //     border-top-color: #0c0;
 // }
-
-
-
