final function and layout of transaction dashboard

--- a/client/src/core/Transactions/Dashboard/Dashboard.styl
+++ b/client/src/core/Transactions/Dashboard/Dashboard.styl
@@ -1,1 +1,10 @@
 // @import "~variable"
+#transaction-dashboard
+    .p-l-6px
+        padding-left 6px
+    .p-r-6px
+        padding-right 6px
+    nav md-datepicker
+        display block
+        width 0px
+        height 0px
