fix windows show image

--- a/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
+++ b/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
@@ -21,6 +21,10 @@
     -moz-background-size: contain;
     -o-background-size: contain;
     background-size contain
+    img
+        height: 100%
+        width: auto
+        margin: auto;
 
 #preview-large::after
     width 100%
