fix image layout

--- a/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
+++ b/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
@@ -22,9 +22,9 @@
     -o-background-size: contain;
     background-size contain
     img
-        height: 100%
+        // width: 100%
+        height: 600px
         width: auto
-        margin: auto;
 
 #preview-large::after
     width 100%
