fix multiple layout issues

--- a/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
+++ b/client/src/core/inhouseOrders/inhouseOrdersDialog.styl
@@ -1,12 +1,7 @@
 @import "~variable"
 #inhouse-orders-dialog
-    md-dialog
-        // min-height: 650px
-        // min-width: 1000px
-        min-width: 100%
-        min-height: 100vh
-
-#inhouse-orders
+    min-width: 100%
+    min-height: 100vh
     md-toolbar
         min-height: 30px
     .header
@@ -18,9 +13,9 @@
         md-icon
             margin-top: 0px
     .footer
-        width: 700px
-        padding: 20px
-        border-top: 1px solid #d2d2d2
+        padding: 60px
+        margin: 5px
+        border-top: 1px solid #777777
     button
         border: 1px solid #6c6c6c
     .padding-box
