--- a/client/src/index.tpl.ejs
+++ b/client/src/index.tpl.ejs
@@ -19,7 +19,7 @@
 
 <body ng-app="beastie" ng-strict-di ng-cloak layout="column" flex>
     <div id="snapshot-div"></div>
-    <div ui-view layout="column" flex layout-fill>
+    <div ui-view layout="column" flex>
         <div style="width:100%;height:100vh;text-align:center;padding-top:200px">
             <img width="200px" src="./assets/img/loading.gif" alt="Loading..." />
         </div>
