--- a/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
+++ b/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
@@ -13,7 +13,6 @@
 #preview-large
     width 100%
     height 100%
-
     background-color rgba(0, 0, 0, 0.75)
     background-repeat no-repeat
     background-position: center center;
@@ -22,11 +21,6 @@
     -o-background-size: contain;
     background-size contain
     img
-        // width: 100%
-        height: 600px
+        // max-width: 100%
+        max-height: 100%
         width: auto
-
-#preview-large::after
-    width 100%
-    height 100%
-    background red
