--- a/client/src/client/dashboard/dashboard.styl
+++ b/client/src/client/dashboard/dashboard.styl
@@ -12,8 +12,8 @@ client-dashboard
     .footer
         button
             border 1px solid #c4d9ff
-            padding: 30px
-            width: 300px
+            padding: 5px
+            min-width: 120px
             span
                 padding: 5px
                 border-radius: 5px
