--- a/client/src/index.variable.styl
+++ b/client/src/index.variable.styl
@@ -22,11 +22,11 @@ body
     width 100%
     overflow: auto;
     overflow-x: hidden!important
-    -webkit-overflow-scrolling: touch;
     position: fixed;
     font-family: $font-family
     -webkit-user-select:none
-
+    -webkit-overflow-scrolling: auto
+    // -webkit-overflow-scrolling: touch;
     // .md-dialog-is-showing
     //     overflow: visible
     // md-backdrop
