--- a/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
+++ b/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.styl
@@ -11,16 +11,14 @@
             max-width: 100%
             height: auto
 #preview-large
+    position: fixed;
+    z-index: 1000
+    left: 0px
+    top: 0px
     width 100%
-    height 100%
+    height 100vh
+    margin: auto
     background-color rgba(0, 0, 0, 0.75)
-    background-repeat no-repeat
-    background-position: center center;
-    -webkit-background-size: contain;
-    -moz-background-size: contain;
-    -o-background-size: contain;
-    background-size contain
     img
-        // max-width: 100%
         max-height: 100%
         width: auto
