fix customer checkin

--- a/client/src/client/petsForm/petsForm.styl
+++ b/client/src/client/petsForm/petsForm.styl
@@ -24,8 +24,8 @@ client-pets-form
     md-input-container
         .md-input
             margin-top: 10px!important
-        // .md-datepicker-input
-        //     font-size: 1  em
+        .md-datepicker-input
+            font-size: 1  em
 
     .vaccine-item
         padding: 10px 0px 20px 30px
@@ -72,5 +72,5 @@ client-pets-form
     .preview-document
         min-height: 400px
 
-    .md-datepicker-calendar-pane
-        z-index: 1200
+    // .md-datepicker-calendar-pane
+    //     z-index: 1200
