fix checkin bugs and update angular

--- a/client/src/core/orders/ordersList/ordersList.styl
+++ b/client/src/core/orders/ordersList/ordersList.styl
@@ -8,8 +8,8 @@ $tileHighlightColor = #D7CCC8
 
 
 
-#md-date-pane0 > div.md-datepicker-input-mask
-    height 0px
+// #md-date-pane0 > div.md-datepicker-input-mask
+//     height 0px
 
 #orders-list
     nav
